<?xml version="1.0"?>
<package>
  <name>robospect_planner</name>
  <version>0.0.1</version>
  <description>The robospect_planner package</description>

  <maintainer email="egambaro@robotnik.es">Elena Gambaro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robotnik_pp_msgs</build_depend> 
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <run_depend>libpcl-all</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robotnik_pp_msgs</run_depend> 
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>

</package>
